We created quiz questions that linked directly to weather API to help us with next step logic

--- a/sams.html
+++ b/sams.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./bootstrap.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
-</head>
-<body>
-    <input id="cityInput" type="text">
-    <button id="searchBtn">Search</button>
+    <style>
+    </style>
+  </head>
+  <body>
+    <div class="content rounded shadow-lg">
+        <h3>Where are you going? </h3>
+
+        <input type="text" id="cityInput">
+        <button type="button" class="btn btn-primary" id="searchBtn">Next</button>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
