--- a/sams.html
+++ b/sams.html
@@ -132,6 +132,9 @@ Luggages in the trolley can be dragged and rearranged.
         <!-- LUGGAGES END HERE -->
       </div>
     </div>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
+    
   </body>
 </html>
