added animation background

--- a/sams.html
+++ b/sams.html
@@ -32,6 +32,24 @@ Luggages in the trolley can be dragged and rearranged.
 
 -->
 
+<head>
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <i class="fa fa-cloud fa-2x c1" aria-hidden="true"></i>
+    <i class="fa fa-cloud fa-5x c2" aria-hidden="true"></i>
+    <i class="fa fa-cloud fa-2x c3" aria-hidden="true"></i>
+    <i class="fa fa-cloud fa-3x c4" aria-hidden="true"></i>
+    <i class="fa fa-cloud fa-5x c5" aria-hidden="true"></i>
+    <i class="fa fa-cloud fa-3x c6" aria-hidden="true"></i>
+    <i class="fa fa-cloud fa-4x c7" aria-hidden="true"></i>
+  <i class="fa fa-fighter-jet plane fa-5x" aria-hidden="true"></i>
+  <i class="fa fa-fighter-jet plane1 fa-5x" aria-hidden="true"></i>
+    <i class="fa fa-fighter-jet plane2 fa-5x" aria-hidden="true"></i>
+    <i class="fa fa-fighter-jet plane3 fa-5x" aria-hidden="true"></i>
+    
+  </body>
+
     <div id="container">
       <div id="trolley">
         <!-- TROLLEY PARTS IN HERE -->
