fixed alignment of the boxes, scroll page, and font

--- a/sams.html
+++ b/sams.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <div class="row">
+  <div class="row align-items-center">
     <div class="col-md-12 title">
       <h1>CarryOn</h1>
     </div>
